@@ -88,9 +88,9 @@ one of the relevant sections:
     again, as was the case before Texinfo 5.0.
 
 * info
-  . New user variables `ref-rendition', `hl-ref-rendition', and
-    `match-rendition' enable cutomization of how cross-references and 
-    search matches are highlighted.
+  . New user variables `link-style', `active-link-style', and
+    `match-style' enable cutomization of how cross-references and search 
+    matches are highlighted.
   . By default only the node pointers are displayed at the top of a node.
     Customize this with the `nodeline' variable.
   . new command M-x tree-search to search all subnodes of a node (IN PROGRESS)
